[tool.poetry]
name = "pyconafrica"
version = "0.1.0"
description = ""
authors = ["Ric da Silva <2575243+rmhsilva@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
teal-lang = {path = "../../../dev/c9c"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
